apps/pihole/ingress.tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole-system
  annotations:
    tailscale.com/proxy-group: ingress-proxies
    tailscale.com/http-redirect: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - pihole
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  number: 80
